# module-federation-examples

./: .gitignore  package.json  pnpm-lock.yaml
.devcontainer/: devcontainer.json
apps/apps-hub-example/: module-federation.config.ts  package.json  rsbuild.config.ts
apps/apps-hub-example/src/: App.css  App.tsx
apps/apps-hub-example/src/configuration/context/global/: types.d.ts
apps/apps-hub-example/src/configuration/context/global/hub-loader/: index.tsx  types.d.ts
apps/apps-hub-example/src/configuration/context/global/hub-loader/services/: MockHubLoader.tsx  ModuleFederationHubLoader.tsx
apps/apps-hub-example/src/configuration/context/global/module-configuration/: index.ts  types.d.ts
apps/apps-hub-example/src/pages/(home)/: index.tsx
apps/apps-hub-example/src/pages/about/: index.tsx
apps/apps-hub-example/src/routes/: index.tsx
apps/apps-hub-example/src/services/: Container.ts
apps/apps-hub-example/src/utils/: index.ts
apps/federated-calculator-example/: module-federation.config.ts  package.json  rsbuild.config.ts
apps/federated-calculator-example/src/: App.css  App.tsx
apps/federated-calculator-example/src/components/: ProviderComponent.tsx
apps/federated-calculator-example/src/components/calculator/: index.tsx
apps/module-federation-runtime/: package.json
apps/modules-config-service-example/: modules.json  package.json
apps/modules-config-service-example/scripts/: add-module.ts
apps/provider/: package.json
crates/webapp/: Cargo.toml
crates/webapp/src/: main.rs
crates/webapp/templates/: about.html.hbs  index.html.hbs
(+2 files in other folders)
