[package]
name = "webapp"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5", features = ["tls"] }
rocket_dyn_templates = { version = "0.1", features = ["handlebars"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
